--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "clipboard": "^2.0.8",
     "core-js": "3.6.5",
     "dropzone": "5.5.1",
     "element-ui": "2.13.2",
